--- a/单词/单词.md
+++ b/单词/单词.md
@@ -105,7 +105,8 @@ v.使具有某种结构；
 英 [ˈstʌmbl]  美 [ˈstʌmbəl] 
 vi.跌跌撞撞地走，蹒跚； 结巴； 弄错，失足； 偶然碰见
 n.绊脚，失足； 差错，失误； 过失，失败；
-变形
+变形模块，lope；}
+=】
 过去式： stumbled 过去分词： stumbled 现在分词： stumbling 第三人称单数： stumbles
 
 20、shuffle
@@ -218,6 +219,16 @@ n.剽窃； 抄袭； 剽窃物； 抄袭物
 adj.& adv.（完全）照字面的（地），逐字的（地）；
 n.逐字翻译；
 
+
+40、violate
+英 [ˈvaɪəleɪt]  美 [ˈvaɪəˌlet] 
+vt.违反； 妨碍； 侵犯； 亵渎，强奸
+变形
+过去式： violated 过去分词： violated 现在分词： violating 第三人称单数： violates
+
+41、pennies
+[ˈpeniz] 
+n.of penny； 便士( penny的名词复数 )； （美国、加拿大的）一分钱； 少量的钱
 
 
 
