--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -2,8 +2,11 @@
 （1）OS:centos7.4
 （2）保证网络正常（关闭本地防火墙，OpenStack安全组等）
 （3）免密 ssh登录
- (4) 拥有ansible-playbook-monitor目录
+ (4) 拥有ansible-playbook-monitor目录及其文件，放在/root/下，目录名不允许修改
 
 # 服务器部署
+
+
+
 
 # 
