--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -5,6 +5,9 @@
  (4) 拥有ansible-playbook-monitor目录及其文件，放在/root/下，目录名不允许修改
 
 # 服务器部署
+(1)cd ansible-playbook-monitor
+
+ansible-playbook -i monitor_service_host deploy_monitor_service.yml
 
 
 
