--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -6,7 +6,10 @@
 
 # 服务器部署
 (1)cd ansible-playbook-monitor
+(2)在monitor_service_host文件中编写需要部署Prometheus server的机器ip
+```
 
+```
 ansible-playbook -i monitor_service_host deploy_monitor_service.yml
 
 
