--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -1,4 +1,4 @@
-# 条件
+# 一、条件
 （1）OS:centos7.4
 （2）保证网络正常（关闭本地防火墙，OpenStack安全组等）
 （3）免密 ssh登录
@@ -6,13 +6,15 @@
 
 # 服务器部署
 (1)cd ansible-playbook-monitor
-(2)在monitor_service_host文件中编写需要部署Prometheus server的机器ip
+(2)在monitor_service_host文件中编写需要部署Prometheus server的机器ip,注意名称不能修改
 ```
-
+[monitor_service_hosts]
+10.5.9.167
+10.5.9.168
+```
+（3）执行部署命令
 ```
 ansible-playbook -i monitor_service_host deploy_monitor_service.yml
-
-
-
+``·
 
 # 
