--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -4,8 +4,8 @@
 （3）免密 ssh登录
  (4) 拥有ansible-playbook-monitor目录及其文件，放在/root/下，目录名不允许修改
 
-# 服务器部署
-(1)cd ansible-playbook-monitor
+# 二、服务器部署
+(1)进入 ansible-playbook-monitor
 (2)在monitor_service_host文件中编写需要部署Prometheus server的机器ip,注意名称不能修改
 ```
 [monitor_service_hosts]
@@ -17,4 +17,6 @@
 ansible-playbook -i monitor_service_host deploy_monitor_service.yml
 ``·
 
-# 
+# 三、部署客户端
+（1）进入 ansible-playbook-monitor
+（2）在monitor_exporter_host
