--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -19,4 +19,13 @@ ansible-playbook -i monitor_service_host deploy_monitor_service.yml
 
 # 三、部署客户端
 （1）进入 ansible-playbook-monitor
-（2）在monitor_exporter_host
+（2）在monitor_exporter_host中编写需要部署的Exporter和对应主机ip,其中server是需要能
+```
+[server]
+10.5.9.167
+10.5.9.168
+
+[HK_IDC2_10_5_8_cluster_prometheus_cpu]
+10.5.9.185
+10.5.9.167
+```
