--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -19,7 +19,7 @@ ansible-playbook -i monitor_service_host deploy_monitor_service.yml
 
 # 三、部署客户端
 （1）进入 ansible-playbook-monitor
-（2）在monitor_exporter_host中编写需要部署的Exporter和对应主机ip,其中server是需要能
+（2）在monitor_exporter_host中编写需要部署的Exporter和对应主机ip,其中server是需要能监控到Exporter的Prometheus server机器，以下名称不能修改。
 ```
 [server]
 10.5.9.167
@@ -29,3 +29,4 @@ ansible-playbook -i monitor_service_host deploy_monitor_service.yml
 10.5.9.185
 10.5.9.167
 ```
+（3）
