--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -29,4 +29,10 @@ ansible-playbook -i monitor_service_host deploy_monitor_service.yml
 10.5.9.185
 10.5.9.167
 ```
-（3）
+（3）执行部署命令
+```
+ansible-playbook  -i monitor_exporter_host deploy_monitor_client.yml
+```
+
+# 四、存放资源
+ansible-playbook-monitor
