--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -35,4 +35,5 @@ ansible-playbook  -i monitor_exporter_host deploy_monitor_client.yml
 ```
 
 # 四、存放资源
-ansible-playbook-monitor
+（1）ansible-playbook-monitor存放在10.5.8.196 /root/下
+（2）
