--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -37,4 +37,9 @@ ansible-playbook  -i monitor_exporter_host deploy_monitor_client.yml
 # 四、存放资源
 （1）ansible-playbook-monitor存放在10.5.8.196 /root/下
 （2）/root/ansible-playbook-monitor/config/change_file.py 存放着修改配置文件脚本
-（3）/root/ansible-playbook-monitor/config/exportname_to_port存放在服务名和端口对应
+（3）/root/ansible-playbook-monitor/config/exportname_to_port存放在服务名和端口对应关系，名称不允许修改
+```
+HK_IDC2_10_5_8_cluster_prometheus_cpu:9105
+```
+
+# 五、
