--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -42,4 +42,7 @@ ansible-playbook  -i monitor_exporter_host deploy_monitor_client.yml
 HK_IDC2_10_5_8_cluster_prometheus_cpu:9105
 ```
 
-# 五、
+# 五、存在问题
+
+（1）go等安装包是否需要在安装，会造成原系统go的冲突？
+
