--- a/k8s/监控一键部署.md
+++ b/k8s/监控一键部署.md
@@ -44,5 +44,6 @@ HK_IDC2_10_5_8_cluster_prometheus_cpu:9105
 
 # 五、存在问题
 
-（1）go等安装包是否需要在安装，会造成原系统go的冲突？
+（1）go等安装包是否需要在安装，会造成原系统go的冲突？会造成系统性能影响？安装go的时间较长
+
 
