--- a/k8s/newnote_1555494069441.md
+++ b/k8s/newnote_1555494069441.md
@@ -1,3 +1,8 @@
 Node exporter 
 
-Get http://10.10.15.49:9100/metrics: dial tcp 10.10.15.49:9100: connect: connection refused
+#Get http://10.10.15.49:9100/metrics: dial tcp 10.10.15.49:9100: connect: connection refused
+
+![title](../.local/static/2019/3/3/1555494154856.1555494154980.png)
+
+#context deadline exceeded
+
