--- a/k8s/newnote_1555494069441.md
+++ b/k8s/newnote_1555494069441.md
@@ -4,5 +4,9 @@ Node exporter
 
 ![title](../.local/static/2019/3/3/1555494154856.1555494154980.png)
 
+![title](../.local/static/2019/3/3/1555494289378.1555494289380.png)
+
+
+
 #context deadline exceeded
 
