--- a/k8s/newnote_1555494069441.md
+++ b/k8s/newnote_1555494069441.md
@@ -6,7 +6,7 @@ Node exporter
 
 ![title](../.local/static/2019/3/3/1555494289378.1555494289380.png)
 
-
+![title](../.local/static/2019/3/3/1555494524325.1555494524328.png)
 
 #context deadline exceeded
 
