--- a/k8s/newnote_1555494069441.md
+++ b/k8s/newnote_1555494069441.md
@@ -12,3 +12,4 @@ Node exporter
 
 
 ![title](../.local/static/2019/3/3/1555494396210.1555494396212.png)
+![title](../.local/static/2019/3/3/1555494588025.1555494588028.png)
