--- Auto-Git Commit ---

--- a/Tools/Ubuntu/系统设置/剪切工具.md
+++ b/Tools/Ubuntu/系统设置/剪切工具.md
@@ -6,8 +6,4 @@
 
 系统设置->键盘->快捷键->截图
 * 设置结果如下
-```
-![2019-08-06-15-32-47.png](.././2019-08-06-15-32-47.png)
-```
-
-
+![2019-08-06-15-47-33.png](./images/2019-08-06-15-47-33.png)
