--- Auto-Git Commit ---

--- a/C/宏.md
+++ b/C/宏.md
@@ -1,9 +1,13 @@
 
-# 1. 常用语法
+# 1. 背景
+写好C语言，漂亮的宏定义很重要，使用宏定义可以防止出错，提高可移植性，可读性，方便性 等等。
+# 2. 常用语法
 
-## 1.1 宏中常用标示
+
+## 2.1 宏中常用标示
 我们假设：x=1
 * \##
+用##把两个宏参数贴合在一起
 ```
 #define   A(x)   T_##x 
 A(1)------〉T_1
@@ -19,3 +23,40 @@ B(1)------〉 '1 '
 C(1)------〉 "1 " 
 ```
 
+## 2.2 使用手法
+
+### 2.2.1 定义宏
+```
+#define   [MacroName]   [MacroValue] 
+```
+### 2.2.2 取消宏
+```
+#undef   [MacroName] 
+```
+
+### 2.2.2 带参数宏
+```
+#define   max(a,b)   ((a)> (b)?   (a),(b)) 
+```
+
+
+
+# 3. 使用场景
+## 3.1 防止重复包含头文件
+```
+#ifndef COMDEF_H
+#define COMDEF_H
+  //头文件内容
+#endif 
+```
+
+## 3.2 重新定义一些类型，防止由于各种平台和编译器的不同，而产生的类型字节数差异，方便移植。
+```
+typedef  unsigned char      boolean;     /* Boolean value type. */
+typedef  unsigned long int  uint32;      /* Unsigned 32 bit value */
+typedef  unsigned short     uint16;      /* Unsigned 16 bit value */
+typedef  unsigned char      uint8;       /* Unsigned 8  bit value */
+typedef  signed long int    int32;       /* Signed 32 bit value */
+typedef  signed short       int16;       /* Signed 16 bit value */
+typedef  signed char        int8;        /* Signed 8  bit value */
+```
