--- Auto-Git Commit ---

--- a/C/宏.md
+++ b/C/宏.md
@@ -60,3 +60,62 @@ typedef  signed long int    int32;       /* Signed 32 bit value */
 typedef  signed short       int16;       /* Signed 16 bit value */
 typedef  signed char        int8;        /* Signed 8  bit value */
 ```
+
+
+# 4. 使用宏的优缺点
+## 4.1 优点
+* 方便程序修改
+定义常量（PI）。这样同时能提高程序在不同平台的移植能力。
+
+* 提高程序效率
+宏在编译时就进行宏展开，在替代函数是能提高不少程序运行时效率。但是宏展开占用代码空间较大，一般对很短函数可以进行宏展开，但是大的函数最好是使用宏定义。（随着计算机硬件提高，认为不需要使用宏展开去替代函数）
+## 4.2 缺点
+* 无法对常量的变量内省进行检查（相对Const变量而言）。
+宏定义在编译时宏展开，编译时无法进行，不分配内存。const是在运行时，类型不匹配时会报错。
+* 边界效应
+没有语法规则，只是强行展开，可能会出现很多问题。
+```
+ #define MUL(A,B) A*B
+而在使用的时候,这样的调用:
+int a=1,b=2,c=3,d=0;
+d=MUL(a+b,c)
+经过编译时候展开,就变成了
+d=a+b*c
+而不是我们所希望的
+d=(a+b)*c
+```
+其解决办法也很简单,就是给每个分量,都加上括号,就可以避免此类问题即,在宏定义的时候,如此定义:
+```
+#define MUL(A,B) ((A)*(B))
+```
+
+* 在define数据类型的时候, 未加括号带来的问题
+```
+ #define dPS struct s *   //注意末尾无分号
+当使用的时候,遇到:
+dPS p1,p2;
+的时候,经过编译时候替换扩展,就变成了
+struct s* p1,p2;
+而p2就不是我们所希望的s的指针类型了,而是一个普通的s数据结构类型的了.产生了边界效应.
+[解决办法]
+对应的解决办法也很简单,就是,遇到此类新数据类型定义的时候,还是用typedef
+将上述宏定义改为:
+typedef struct s * tPS; // 注意末尾有分号
+而后的使用:
+tPS p1,p2;
+就正常了.
+```
+
+* 特殊情况时候,加了括号也无法避免错误
+在宏定义中出现++或—之类的操作符的时候,即使加括号,也无法避免其中的问题
+```
+ #define MIN(A,B) ((A)<(B)?(A):(B))
+如果进行如此调用
+int a=1,b=3,min=0;
+min=MIN(a++,b);
+经过编译替换展开后,就成了
+max=((a++)< (b)?(a++):(b))
+计算出来的结果,就是
+min=3,而不是我们所要的min=1了.
+此类问题无法避免,除非程序员在调用宏的时候,自己多加注意,尽量避免此类调用.
+```
