--- Auto-Git Commit ---

--- a/vim 使用/常用配置.md
+++ b/vim 使用/常用配置.md
@@ -27,7 +27,7 @@ https://www.jianshu.com/p/05116bcc2c3b
   3 set shiftwidth=4
   4 set tabstop=4
   5 set softtabstop=4
-  6 set expandtab
+  6 #set expandtab ,后来注释掉是因为我们在使用makefile时，使用make规则只能使用tab不能使用空格代替
   7 
   8 " set autoindent
   9 " set cindent
