--- Auto-Git Commit ---

--- a/Tools/MarkDown/使用.md
+++ b/Tools/MarkDown/使用.md
@@ -1,9 +1,8 @@
 [toc]
 # 1. 常用语法 
 ## 1.1 添加目录
-首行使用[toc],如本文件所示
+首行使用[toc],如本文件markdown源码所示
 
 ## 1.2 使用图片
 “\!\[2019-08-06-15-53-41.png](./images/2019-08-06-15-53-41.png)”
-
 很多工具支持图片复制黏贴（见vscode设置）
