--- Auto-Git Commit ---

--- a/linux kernal/汇编基本概念.md/常用汇编指令.md
+++ b/linux kernal/汇编基本概念.md/常用汇编指令.md
@@ -1,5 +1,22 @@
 [toc]
 
+# 1. 标识
 * entry 标识伪代码指令入口
     如下图所示，第一行start代码标识。意思就是进入start 代码段执行
 ![2019-08-12-15-37-30.png](./images/2019-08-12-15-37-30.png)
+
+# 2.循环执行
+一定要设置终止条件
+* REP（重复）
+* REPE（相等时重复）
+* REPNE（不相等时重复
+* REPZ（为零时重复
+* REPNZ（不为零时重复）
+![2019-08-12-15-42-37.png](./images/2019-08-12-15-42-37.png)
+
+
+# 3.跳转指令
+* jmpi 段间跳转
+这部分标识跳转到INITSEG:go处的指令执行（属于段间跳转）
+![2019-08-12-15-52-37.png](./images/2019-08-12-15-52-37.png)
+* jmp 段内跳转
