--- Auto-Git Commit ---

--- a/linux kernal/汇编基本概念.md/各种寄存器的意义.md
+++ b/linux kernal/汇编基本概念.md/各种寄存器的意义.md
@@ -1,6 +1,10 @@
 [toc]
 
 * CS: 代码段基地址，存放在CPU中
+* DS (Data Segment) 数据段
+* ES (Extra Segment) 附加段
+* SS (Stack Segment) 栈段 
+* FS、GS 是从 80386 开始增加的，没有全称，取名就是按字母序排在 CS、DS、ES 之后的。在这之前只有一个辅助段寄存器ES,增加这两个寄存器是为了减轻ES寄存器的负担,并能更好地配合适用于通用寄存器组的基址和变址寄存器. (个人认为是从实模式下转向保护模式下段页寻址需要更多寄存器)。不能直接用立即数给它赋值。 
 
 * IP/EIP: 指令指针寄存器，在CPU中，表示要执行指令在代码段中的偏移地址。CS:IP结合就是要执行指令地址。实模式下为绝对地址，16位（IP），实模式下为32叫做线性地址（EIP）
 
