--- a/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
@@ -30,3 +30,7 @@
 ![2019-08-13-17-23-57.png](./images/2019-08-13-17-23-57.png)
 ![2019-08-13-17-24-25.png](./images/2019-08-13-17-24-25.png)
 ![2019-08-13-17-24-50.png](./images/2019-08-13-17-24-50.png)
+
+* rd_init() 先将虚拟盘的请求处理函数do_rq_request()与图2-4函数控制结构blk_dev[7]第二项挂钩。将虚拟盘内内存区域清0.结果如下图所示。最后将虚拟盘长度返回，返回值用来设置主内存起始位置
+    
+    ![2019-08-13-17-35-43.png](./images/2019-08-13-17-35-43.png)
