--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
@@ -22,6 +22,7 @@
     * 虚拟盘（缓存）可以先将外设上的数据复制到虚拟盘中，提高读写速度。
 
 
+## 3.1 设置虚拟盘大小
 * 先根据内存大小对缓冲区和主内存打下进行设置，结果如下
 ![2019-08-13-16-39-16.png](./images/2019-08-13-16-39-16.png)
 代码如下
@@ -34,3 +35,16 @@
 * rd_init() 先将虚拟盘的请求处理函数do_rq_request()与图2-4函数控制结构blk_dev[7]第二项挂钩。将虚拟盘内内存区域清0.结果如下图所示。最后将虚拟盘长度返回，返回值用来设置主内存起始位置
     
     ![2019-08-13-17-35-43.png](./images/2019-08-13-17-35-43.png)
+
+# 3.2. 设置主内存--内存管理结构mem_map初始化
+* 对主内存起始位置确定，标志这主内存和缓冲区大小已经确定。这时调用men_init（）函数
+* 系统使用mem_map对1M以上内存进行分页管理，记录一个页面使用次数。系统首先将所有页面置100，然后将主内存区域置0表示未使用。
+* 操作系统内核区域（1M）和用户区域（主内存）使用的是不同的分页管理方。内核的分页管理方式使得线性地址和物理地址是一致的，但是用户区域的线性地址和用户地址不一致
+
+初始化结果如下
+![2019-08-14-09-06-58.png](./images/2019-08-14-09-06-58.png)
+
+初始化代码如下
+![2019-08-14-09-07-59.png](./images/2019-08-14-09-07-59.png)
+![2019-08-14-09-08-23.png](./images/2019-08-14-09-08-23.png)
+
