--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
@@ -48,3 +48,27 @@
 ![2019-08-14-09-07-59.png](./images/2019-08-14-09-07-59.png)
 ![2019-08-14-09-08-23.png](./images/2019-08-14-09-08-23.png)
 
+# 4. 设置中断服务
+
+* trap_init()将函数中断、异常处理的服务程序与IDT进行挂接，逐步重建中断服务体系，支持内核、进程在主机中的运算。
+
+* 挂接后结果如下
+![2019-08-14-09-32-08.png](./images/2019-08-14-09-32-08.png)
+
+* 函数执行结果如下
+![2019-08-14-09-33-11.png](./images/2019-08-14-09-33-11.png)
+![2019-08-14-09-34-43.png](./images/2019-08-14-09-34-43.png)
+![2019-08-14-09-39-11.png](./images/2019-08-14-09-39-11.png)
+
+* 这些代码就是为了讲之前讲述的中断描述符
+* 函数调用过程如下
+![2019-08-14-09-49-47.png](./images/2019-08-14-09-49-47.png)
+* 函数处理结果如下
+![2019-08-14-09-50-23.png](./images/2019-08-14-09-50-23.png)
+
+* set_system_gate 和set_trap_gate所使用的__set_gat是一致的。不同的是set_trap_gate 的dpl是0（特权级），只能内核处理，而set_system_gate的dpl是3（用户级）
+
+* 中断过程如下：硬件产生中断信后传递给8259A，8259A对信号进行初步处理，看CPU执行情况决定是否将信号传递给CPU，如果CPU接收到信号就立即打断正在执行的程序并通过IDT找到对应的中断服务程序。
+
+
+* 早期中断信号处理是通过CPU主动轮询查看是否有中断信号，现在方式换成被动响应。这种设计模式是计算机系统的一大进步。
