--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
@@ -72,3 +72,13 @@
 
 
 * 早期中断信号处理是通过CPU主动轮询查看是否有中断信号，现在方式换成被动响应。这种设计模式是计算机系统的一大进步。
+
+# 5. 硬件设备
+## 5.1 初始化块设备请求项数据结构
+* 硬件设备分块设备和字符设备。进程和设备进行通信都需要进过缓冲区。
+* 请求项管理结构request[32]就是操作系统管理缓冲区中缓冲块与块设备上逻辑上读写关系的数据结构。并且各种请求的优先级都是通过请求管理数据结构处理的。
+
+![2019-08-14-10-17-17.png](./images/2019-08-14-10-17-17.png)
+
+## 5.2 初始化通用硬件设备
+没细看，不是很关注
