--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
@@ -82,3 +82,43 @@
 
 ## 5.2 初始化通用硬件设备
 没细看，不是很关注
+
+# 6. 0号进程
+* 第一个进程是0号进程。没有fork是怎么创建进程的？
+
+* 0号进程管理结构task_struct已经在代码设计阶段事先设计好了，但是并不代表0号进程就可以直接用了，因为要将task_struct和LDT、TSS、GDT关联。并对GDT和task[64]以及与进程相关的寄存器进行初始化
+
+* 0号进程支持中断轮询运行，所有子进程也继承这种能力。在这里进行时钟中断设置。
+
+* 0号进程需要提供调用系统中断的能力，通过set_system_gate将system_call和IDT绑定，这样0号进程就能使用系统调用能力。并且0号将这种能力遗传给所有子进程，这样进程就完成调用系统中断能力。
+
+
+# 7. 初始化缓冲区管理结构
+
+* 缓存区存在于内存和外设之间，作为内存和外设交互的中间途径。
+* 操作系统通过设置hash_table[NR_HASH] buffer_head双向环链表组成的复杂hash表管理缓冲区
+
+* 在内核末端和缓冲区地址末端相向分别建立buffer_head（低地址）和缓冲区块（高地址），直到不足一个buffer_head和缓冲区块
+    * buffer 成员包括设备号b_dev,引用次数（b_count）,更新标志b_uptodata,脏标志b_dirt,锁定标志b_block 都设置为0
+    * b_data指向缓冲区块
+    * b_prev_free和b_next_free将所有buffer-head组成一个双向环链表 
+* 最后将hash_table所有数据都设置为null
+
+# 8. 初始化硬盘和软盘
+忽略
+
+# 9. 开启中断
+* 前面已经划分内存大小，初始化各种类型数据结构，并完成初始化内存，现在可以开始启用中断
+
+* 开启中断很简单，就是打开EFLAGES中的中断位
+
+## 9.1 进程从0级进程翻转到3级进程，成为真正的进程
+* linux 操作系统规定，除了进程0之外，所有进程都需要由已有进程在三级特权下创建。因此进程0创建进程1之前，必须要有0级特权转换成3级权限。
+
+* 翻转权限很显然是使用中断。
+    * 中断和函数调用过程非常像，不同的是函数调用知道调用地址在什么地方，因此很容易实现压栈。但是进程是不知道中断服务程序地址的，所以压栈出栈操作都是由硬件完成的。
+    * 0号进程权限变化参考了进程使用系统调用的权限翻转过程。不同的是系统调用是双向的（有return），但是0号进程权限变化是单向的。因此0号进程在翻转权限时是通过手工压栈完成的，模拟return操作。
+    ![2019-08-14-16-23-04.png](./images/2019-08-14-16-23-04.png)
+
+    * 执行一次move_to_user_mode相当于一次中断返回，这样0号进程就成为实际上进程。
+
