--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
@@ -36,7 +36,7 @@
     
     ![2019-08-13-17-35-43.png](./images/2019-08-13-17-35-43.png)
 
-# 3.2. 设置主内存--内存管理结构mem_map初始化
+## 3.2. 设置主内存--内存管理结构mem_map初始化
 * 对主内存起始位置确定，标志这主内存和缓冲区大小已经确定。这时调用men_init（）函数
 * 系统使用mem_map对1M以上内存进行分页管理，记录一个页面使用次数。系统首先将所有页面置100，然后将主内存区域置0表示未使用。
 * 操作系统内核区域（1M）和用户区域（主内存）使用的是不同的分页管理方。内核的分页管理方式使得线性地址和物理地址是一致的，但是用户区域的线性地址和用户地址不一致
