--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/设备初始化和激活进程0.md
@@ -103,6 +103,7 @@
     * b_data指向缓冲区块
     * b_prev_free和b_next_free将所有buffer-head组成一个双向环链表 
 * 最后将hash_table所有数据都设置为null
+![2019-08-15-09-29-50.png](./images/2019-08-15-09-29-50.png)
 
 # 8. 初始化硬盘和软盘
 忽略
