--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第二章 设备初始化和激活进程0.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第二章 设备初始化和激活进程0.md
@@ -1,4 +1,5 @@
 [toc]
+![02.jpg](./images/02.jpg)
 # 1.背景
 前面我们已经知道启动了操作系统面函数。但是距离执行用户程序还有一段距离，比如用户程序进行计算、和设备交互、人机交互。
 这章我们主要完成上面任务，初始化设备并且启动第一个进程--0号进程。
