--- Auto-Git Commit ---

--- a/linux kernal/汇编基本概念.md/常用汇编指令.md
+++ b/linux kernal/汇编基本概念.md/常用汇编指令.md
@@ -5,7 +5,12 @@
     如下图所示，第一行start代码标识。意思就是进入start 代码段执行
 ![2019-08-12-15-37-30.png](./images/2019-08-12-15-37-30.png)
 
-# 2.循环执行
+## 1.1 flag 标志
+* ZF=1 0标志为0
+* CF=1 产生借位
+* SF=1 符号位为负
+* OF=1 溢出
+# 2.循环执行(rep)
 一定要设置终止条件
 * REP（重复）
 * REPE（相等时重复）
@@ -15,8 +20,27 @@
 ![2019-08-12-15-42-37.png](./images/2019-08-12-15-42-37.png)
 
 
-# 3.跳转指令
+# 3.跳转指令(jmp)
 * jmpi 段间跳转
 这部分标识跳转到INITSEG:go处的指令执行（属于段间跳转）
 ![2019-08-12-15-52-37.png](./images/2019-08-12-15-52-37.png)
 * jmp 段内跳转
+
+# 4. 比较指令（cmp）
+* cmp a b
+    * 使用第一个操作数减去第二个操作数
+    * 不影响a b值
+    * 影响的是flag 的CF、ZF、OF、AF、PF
+
+    * 如何判断大小呢
+        * 若是无符号数
+            * ZF=1->a=b
+            * ZF=0 CF=1 -> a<b
+            * ZF=0 CF=0 -> a>b
+        * 若是有符号数
+            SF=0,OF=0 -> a>b
+            SF=1,OF=0 -> a<b
+            SF=0,OF=1 -> a<b
+            SF=1,OF=1 -> a>b
+
+            正+正，负+负，正-负，负-正上面四中情况可能溢出
