--- a/linux kernal/汇编基本概念.md/常用汇编指令.md
+++ b/linux kernal/汇编基本概念.md/常用汇编指令.md
@@ -21,10 +21,18 @@
 
 
 # 3.跳转指令(jmp)
+## 3.1 段间
 * jmpi 段间跳转
 这部分标识跳转到INITSEG:go处的指令执行（属于段间跳转）
 ![2019-08-12-15-52-37.png](./images/2019-08-12-15-52-37.png)
+## 3.2段内
 * jmp 段内跳转
+### 3.2.1 无符号
+* ja 大于调转（a 表示above）
+* jna 不大于
+### 3.2.2 有符号
+* jg 大于
+* jle 小于等于
 
 # 4. 比较指令（cmp）
 * cmp a b
