--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
@@ -55,6 +55,21 @@ fork 实际上执行的是unistd.h中的宏函数syscall0
 * copy_process函数 主要是通过进程0信息来创建进程1结构信息
     * 为进程1创建task_struct,将进程0的task_struct赋值给进程1
     * 为进程1的task-struct和tss做个性化设置
+    * 为进程1创建页表，将进程0的页表项赋值给该页表项
+    * 进程1共享进程0文件
+    * 将进程1设置为就绪态，参与进程间切换
+## 2.4.1 申请内存页
+![2019-08-15-17-29-49.png](./images/2019-08-15-17-29-49.png)
+* 这段代码是申请内存页赋值给task[1]的数据结构
 
+![2019-08-15-17-32-24.png](./images/2019-08-15-17-32-24.png)
+![2019-08-15-17-32-37.png](./images/2019-08-15-17-32-37.png)
+* 这段代码意思是从高地址反向扫描主内存区，找到一块引用数为0的空闲页返回
+
+## 2.4.2 将进程0的taskstruct赋值给进程1，并对进程1的task_struct做个性话设置
+![2019-08-15-17-48-33.png](./images/2019-08-15-17-48-33.png)
+![2019-08-15-17-48-47.png](./images/2019-08-15-17-48-47.png)
+*   *p=*current(current标识0号进程struct，体现了1号进程继承0号进程能力)但是只是拷贝struct，并没有拷贝内核栈
+* 这时1号进程基本上具有了进程的绝大部分结构，但是处于不可中断状态
 
 
