--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
@@ -84,4 +84,19 @@ fork 实际上执行的是unistd.h中的宏函数syscall0
 ![2019-08-16-09-31-14.png](./images/2019-08-16-09-31-14.png)
 
 
+#### 2.4.3.2 为进程1创建第1个页表并设置对应的目录项
+* 从下面的寻址方式来看，完成是根据页来寻址。段可能只是用来逻辑保护方式。
+![2019-08-16-09-40-14.png](./images/2019-08-16-09-40-14.png)
+* 上面代码中copy_page_tables()就是设置页表过程。
+    * 先为新的页表申请一个空闲页面
+    * 把进程0的160个页表项复制过来（1页4kb，共640kb），因此进程0和进程1都指向相同页面。
+    * 为进程1设置页目录项
+    * 最后用重置CR3方法刷新页变换高速缓存，
+代码如下
+![2019-08-16-09-52-42.png](./images/2019-08-16-09-52-42.png)
+![2019-08-16-10-01-06.png](./images/2019-08-16-10-01-06.png)
+![2019-08-16-10-03-16.png](./images/2019-08-16-10-03-16.png)
+
+
+
 
