--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
@@ -98,5 +98,15 @@ fork 实际上执行的是unistd.h中的宏函数syscall0
 ![2019-08-16-10-03-16.png](./images/2019-08-16-10-03-16.png)
 
 
+#### 2.4.3.3 进程1从进程0中独立
+* 现在进程1还是个空架子，没有自己程序，没有自己的页目录结构
+* 进程1有程序后，会先和1解除关系，并重新组织目录结构。这部分没讲
+
+## 2.5 进程1共享进程0的文件
+
+在copy_process()中，task_struct设置与文件相关成员。包括打开了那些文件p->filp[20],0进程当前工作的目录节点i，根目录i节点结构，以及执行文件i节点结构。（虽然进程0这些值都是空的，进程只具备在主机中正常运行能力，但是不具备和设备交互能力，但是这些设置对进程的遗传非常有意义
+![2019-08-16-10-21-29.png](./images/2019-08-16-10-21-29.png)
+
+
 
 
