--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
@@ -107,6 +107,57 @@ fork 实际上执行的是unistd.h中的宏函数syscall0
 在copy_process()中，task_struct设置与文件相关成员。包括打开了那些文件p->filp[20],0进程当前工作的目录节点i，根目录i节点结构，以及执行文件i节点结构。（虽然进程0这些值都是空的，进程只具备在主机中正常运行能力，但是不具备和设备交互能力，但是这些设置对进程的遗传非常有意义
 ![2019-08-16-10-21-29.png](./images/2019-08-16-10-21-29.png)
 
+## 2.6 设置进程1在GDT中表项
+之后将LDT和TSS挂在在GDT中。
+![2019-08-16-10-26-34.png](./images/2019-08-16-10-26-34.png)
+
+## 2.7 进程处于就绪态
+![2019-08-16-10-28-10.png](./images/2019-08-16-10-28-10.png)
+自此，进程1创建工作完成，进程1有进程0的全部能力，可以在系统中正常运行。
+
+## 2.8 下面是一系列系统调用返回返回工作
+
+* copy_process()执行完毕返回sys_fork()中的call_copy_process()下一行执行，执行代码如下，
+![2019-08-16-11-15-33.png](./images/2019-08-16-11-15-33.png)
+
+* 返回到system_call中的call_table中下一行执行。
+![2019-08-16-11-22-02.png](./images/2019-08-16-11-22-02.png)
+![2019-08-16-11-22-17.png](./images/2019-08-16-11-22-17.png)
+
+    * 上面有个popl %eax,就是将1号进程pid 复制给%eax
+    * iret中断返回，CPU硬件将int 0x80中断时候压ss esp 等寄存器值返回给cpu
+
+![2019-08-16-11-29-33.png](./images/2019-08-16-11-29-33.png)
+![2019-08-16-11-29-53.png](./images/2019-08-16-11-29-53.png)
+上面返回的是__res是eax寄存器值1，说以！1为假，会执行pause部分
+
+
+# 3. 内核第一次做进程调度
+之前都是执行0进程代码，现在开始切换到1进程执行。
+
+* 普通进程切换三种情况
+    * 进程时间片执行完毕
+    * 进程执行完毕
+    * 进程产生中断
+
+* 0号进程进行进程切换有些不同
+在执行 for(;;) pause(),最终会执行到schedule（）切换到进程1。
+![2019-08-16-11-48-39.png](./images/2019-08-16-11-48-39.png)
+pause()和fork()一样，最终会执行到unistd.h中的syscall0，通过int 80中断，在system_call.s中调用call _system_call_table(,%eax,4)映射到sys_pause()中区执行。fork使用汇编写的，pause是C写的。
+
+
+* 进入sys_pause()中断服务程序后，会将进程0设置成可中断，然后进行schedule调用
+![2019-08-16-11-52-41.png](./images/2019-08-16-11-52-41.png)
+
+下面是对schedule（）函数进行分析
+* schedule 第一次便利task[64]这个数据结构，只要指针不为空，就要对他们“报警定时值alarm”和信号位图“signal”进行处理（这里面在后面描述）。这时0号进程没有接受任何信号，因此第一次检查不会进行任何操作。
+
+* 第二次遍历所有进程，比较进程状态和时间片，找出就绪态中cont值最大进程。这时就绪态中就只有1号进程，因此找出的进程就是1号进程。
+* 然后执行swit_to_next切换到1号进程中去
+![2019-08-16-14-13-09.png](./images/2019-08-16-14-13-09.png)
+![2019-08-16-14-13-31.png](./images/2019-08-16-14-13-31.png)
+![2019-08-16-14-13-49.png](./images/2019-08-16-14-13-49.png)
+
 
 
 
