--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
@@ -158,6 +158,45 @@ pause()和fork()一样，最终会执行到unistd.h中的syscall0，通过int 80
 ![2019-08-16-14-13-31.png](./images/2019-08-16-14-13-31.png)
 ![2019-08-16-14-13-49.png](./images/2019-08-16-14-13-49.png)
 
+* "ljmp %0 \n\t"，；ljmp通过CPU任务门机制（并未实际使用任务men），将进程0信息保存在TSS中，取出进程1的TSS、LDT给CPU各种寄存器。并实现从0级权限转换到3级权限进程1代码。
+
+
+# 4. 进程1的执行
+* note:
+    * 进程1使用进程0的结构，进程1如何构建自己的环境，并和设备交互
+    * 上面的ljmp还没有执行，因此系统调用int 80并没有返回
+
+ljmp通过任务门机制将进程1的TSS给CPU，那么tss.eip就是目前CPU EIP值。但是由于EIP源于进程0用户程序，所以现在EIP指向的任然是fork处代码（如何和进程0过程区分开，避免死循环呢）
+![2019-08-16-14-38-15.png](./images/2019-08-16-14-38-15.png)
+由于上面0进程处理后，0进程的tss.eax=0，在return的时候，返回的其实是0.
+
+return到面函数
+![2019-08-16-14-43-10.png](./images/2019-08-16-14-43-10.png)
+由于fork()返回值是0，则这次会执行init()代码（经分析，只有1号进程才能执行这段init代码，因为0号进程的子进程只有1号进程）
+
+
+![2019-08-16-14-45-53.png](./images/2019-08-16-14-45-53.png)
+* init函数主要执行setup函数。setup函数也是一个系统调用。前面的pause()系统调用还没有中断返回，现在setup有开始一个中断
+
+## 4.1 进程1为安装硬盘文件系统做准备
+
+主要过程如下
+*   根据机器系统数据设置硬盘参数
+*   读取硬盘引导快
+*   从引导块中获取信息
+
+### 4.1.1 设置硬盘hard_info
+硬盘hard_info包括磁头数，磁道数、扇区数
+![2019-08-16-14-54-41.png](./images/2019-08-16-14-54-41.png)
+
+### 4.1.2 读取硬盘引导块在缓冲区
+略
+### 4.1.3 将缓冲区块和请求项结构挂接
+### 4.1.4 读硬盘
+读硬盘会将
+
+
+
 
 
 
