--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
@@ -193,7 +193,53 @@ return到面函数
 略
 ### 4.1.3 将缓冲区块和请求项结构挂接
 ### 4.1.4 读硬盘
-读硬盘会将
+读硬盘会将调用schedule()函数。切换到0进程中。
+note: 在设置硬盘的时候，已经将进程1设置成不可中断状态。
+
+* 常规进程切换必须有两个条件，一个是进程处于就绪态，一个是count值最大
+    * 参照代码 if((*p)->state==TASK_RUNNING && p->count>c)
+    * 但是由于当前1号进程处于不可中断，0号进程是可中断，因此没有满足进程切换条件
+
+* kernel解决方案是强行切换到0进程（结果是，没有进程处于就绪态时，我们就切换到0进程中）
+    * next初始化代码是0进程，因此会切换到0进程中去
+    ![2019-08-16-15-19-31.png](./images/2019-08-16-15-19-31.png)
+
+    * 当前进程0切换到进程1时，是从switch_to(1)的ljmp %0 \n\t这行切走的，现在要执行cmpl这行指令
+    ![2019-08-16-15-34-20.png](./images/2019-08-16-15-34-20.png)
+    ![2019-08-16-15-40-09.png](./images/2019-08-16-15-40-09.png)
+
+进程从0号进程切换到1号进程路线是pause()->sys_pause(),schedule()、switch_to()这个调用路线执行过来。现在return到sys_pause()中的for(;;) pause()中执行
+
+pause()会调用schedule（）函数，schedule函数会不断去寻找可以切换进程。由于taks[64]中没有就绪进程可以切换，因此0号进程会切换到0号进程中。
+
+现在我们看“cmpl %%ecx\n\t”,"je 1 f\n\t",这两条指令的意思是如果是当前进程切换到当前进程，就跳转到下面1.
+![2019-08-16-15-56-42.png](./images/2019-08-16-15-56-42.png)
+* 这就是0号进程的特殊作用。当所有进程都挂起或者没有进程在执行时，0进程就维持基本运转。所以有人叫0进程为“怠速进程”，就像汽车没有启动维持汽车怠速状态。
+
+* 由于硬盘读写速度慢，硬盘任然忙着将指令写在缓存中。
+
+### 4.1.5 硬盘发生硬中断
+
+硬盘读写完毕后发生硬中断，终止正在执行程序，肯定在pause（），sys_pause(),schedule(),switch_to()函数某处。现在去执行硬件中断程序。
+* 硬件中断程序是不断载入磁盘引导盘。在载入引导盘结束之后，会将进程1设置成就绪状态。
+* 硬盘中断处理结束，也就是载入硬盘引导快工作结束。ret 到进程0中。
+
+### 4.1.6 切换到进程1
+0进程继续调用schedule，这时进程1是就绪状态，因此切换到进程1执行。
+
+![2019-08-16-16-25-57.png](./images/2019-08-16-16-25-57.png)
+进程是从ljmp切走的。这时硬盘引导盘使命结束，为第五章安装硬盘文件系统做好准备。
+
+## 4.2 进程1格式化虚拟磁盘并跟换根设备的虚拟磁盘
+第二章讲过设置虚拟盘空间并初始化。那时候盘是一块白盘，没有文件系统格式。bootsect、setup、system（1+4+240=245），这次格式化是从256个扇区开始
+![2019-08-16-16-35-05.png](./images/2019-08-16-16-35-05.png)
+
+* re_load() 从硬盘读取写数据块，也就是“格式化”虚拟盘需要的引导盘和超级块
+* 引导盘数据块没什么用
+* 之后分析超级块信息，包括判断文件系统是不是minix文件系统，根文件系统数据会不会比整个虚拟盘区都大。这些条件通过才能加载根文件系统。
+
+
+
 
 
 
