--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
@@ -238,7 +238,22 @@ pause()会调用schedule（）函数，schedule函数会不断去寻找可以切
 * 引导盘数据块没什么用
 * 之后分析超级块信息，包括判断文件系统是不是minix文件系统，根文件系统数据会不会比整个虚拟盘区都大。这些条件通过才能加载根文件系统。
 
+![2019-08-16-16-42-55.png](./images/2019-08-16-16-42-55.png)
+![2019-08-16-16-43-18.png](./images/2019-08-16-16-43-18.png)
 
+* 然后调用breada（）函数将文件系统相关内容拷贝到虚拟盘中，最后释放缓冲区。入职后将虚拟盘作为根文件系统。最终完成格式化过程。
+
+![2019-08-16-16-45-43.png](./images/2019-08-16-16-45-43.png)
+![2019-08-16-16-46-15.png](./images/2019-08-16-16-46-15.png)
+
+## 4.5 在设备上加载根文件系统
+
+操作系统中加载根文件系统涉及文件、文件系统、根文件系统、加载文件系统、加载根文件系统这几个概念。这里我们我们只讨论设备（硬盘，虚拟盘）
+
+* 操作系统文件系统分两部分，一部分是操作系统内核内，一部分是核外。
+
+* 文件系统用i节点管理文件，一个节点管理一个文件。文件系统使用树状管理方式
+![2019-08-16-17-00-31.png](./images/2019-08-16-17-00-31.png)
 
 
 
