--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
@@ -255,6 +255,37 @@ pause()会调用schedule（）函数，schedule函数会不断去寻找可以切
 * 文件系统用i节点管理文件，一个节点管理一个文件。文件系统使用树状管理方式
 ![2019-08-16-17-00-31.png](./images/2019-08-16-17-00-31.png)
 
+* 一个系统中可以有多套文件系统，通过mount方式挂载。因此系统中一定有一个被其它文件系统挂载的文件系统。这个文件系统叫做根文件系统，跟系统所在设备是根设备。
+
+* 被的文件系统可以挂在在根设备上，那根设备挂在在什么地方呢？答案是挂在在super_block[8]上。
+
+Linux 0.11上只有一个根设备，每个数组元素是一个超级块，一个超级块管理一个设备，也就是操作系统上只能挂在8块逻辑设备，并且只有一个是根设备。加载文件系统，最重要的是将文件系统中i节点挂在在super——block[8]中。
+
+
+* 挂在根文件系统主要分三步
+    * 复制超级设备到spuer_block[8]中，并将根设备i节点挂载在super_block[8] 中的超级设备上
+    * 将驻留在缓冲区中的16个缓冲块根设备逻辑位图，i节点位图分别挂在在super_block[8]中根设备超级块s_zmap[8],s_imap[8]上
+    * 将当前文件系统指针指向根设备上。root指针指向根设备i节点
+
+通过调用mount_root()函数实现根设备上加载根文件系统。
+![2019-08-16-17-16-42.png](./images/2019-08-16-17-16-42.png)
+![2019-08-16-17-16-55.png](./images/2019-08-16-17-16-55.png)
+
+### 4.5.1 根设备复制到super_block[8]中
+
+系统只想和任何设备通过文件方式进行交互，并且将设备信息存储在super_block中，这样系统就可以通过super_block获取设备在文件系统中信息。根设备页不例外。
+![2019-08-16-17-24-05.png](./images/2019-08-16-17-24-05.png)
+![2019-08-16-17-24-17.png](./images/2019-08-16-17-24-17.png)
+
+* 前面rd_load()已经格式化号虚拟盘，接下来会调用read_super()函数将从虚拟盘中读取根设备超级块。并复制到super_block[8]中。
+
+* read_super()先检测超级盘是否被加载，如果被加载则直接使用，否则加载。
+![2019-08-16-17-28-47.png](./images/2019-08-16-17-28-47.png)
+
+* 根设备文件系统没有被加载过，因此需要在super_block中申请一项（此时是第一项），并对其加锁将根文件系统块写在super_block[8]中。
+![2019-08-16-17-32-22.png](./images/2019-08-16-17-32-22.png)
+
+
 
 
 
