--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第三章 进程1的创建和执行.md
@@ -75,7 +75,7 @@ fork 实际上执行的是unistd.h中的宏函数syscall0
 ### 2.4.3 设置进程1的分页管理
 * linux是段页管理基址，所有访问都是先访问段然后访问页
 
-#### 2.4.3.1 在进程1的线性
+#### 2.4.3.1 在进程1的线性地址空间设置代码段和数据段
 在下面代码中，copy_mem()先设置进程1代码段、数据段段基址、段限长，提取当前进程（0进程）代码段、数据段基址限长信息，并设置进程1的数据段和代码段基址。
 ![2019-08-16-09-19-33.png](./images/2019-08-16-09-19-33.png)
 
