--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第四章 进程2创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第四章 进程2创建和执行.md
@@ -39,5 +39,29 @@ tty0（终端文件）文件加载后形成如下效果图
     * get_fs_byte()是解析路径的核心函数，可以逐一提取路径中的字符，在后面经常使用到。
     ![2019-08-19-16-19-32.png](./images/2019-08-19-16-19-32.png)
 
+    * get_dir()首先确定路径的绝对起点，即分析“/dev/tty0”这个路径的第一个字符是不是"/",如果是，则说明路径是绝对路径，因此将会从根节点开始查找路径。
+    ![2019-08-19-16-45-08.png](./images/2019-08-19-16-45-08.png)
+    ![2019-08-19-16-45-24.png](./images/2019-08-19-16-45-24.png)
+
+
+* 获取dev目录i节点
+
+从根路径i节点遍历解析"/dev/tyy0"这个路径名，首先会解析到dev这个目录项，之后在虚拟盘中找到这个目录所对应的逻辑块，并读进指定缓冲区。
+![2019-08-19-17-00-52.png](./images/2019-08-19-17-00-52.png)
+![2019-08-19-17-01-06.png](./images/2019-08-19-17-01-06.png)
+
+/dev/ttyO 路径名 dev 的’d’字符开始遍历,遇到’/’后跳出循环, name I en 数值累加为 3 。这些信息将和根 i 节点指针一起,作为 find_entry()函数的参数使用。 find_entry()函数会将目录所在的逻辑块读入缓冲块。
+![2019-08-19-17-03-20.png](./images/2019-08-19-17-03-20.png)
+
+得到dev i节点号就可以“dev”目录所有应目录文件i节点，内核就可以通过i节点找到dev目录文件
+
+* 获取i节点代码如下
+![2019-08-19-17-07-33.png](./images/2019-08-19-17-07-33.png)
+![2019-08-19-17-07-50.png](./images/2019-08-19-17-07-50.png)
+
+inode_table[32 ]用来管理所有被打开文件的 i 节点; iget()函数根据 i 节点号和设备号,将文件 i 节点载入 inode_table[32 ]。获得 dev 目录文件 I 节点的情景如图 4-4 所示。
+![2019-08-19-17-08-53.png](./images/2019-08-19-17-08-53.png)
+
+
 
 
