--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第四章 进程2创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第四章 进程2创建和执行.md
@@ -145,3 +145,13 @@ sys_open( )最后要针对 file_table[64]中与进程 l 的 filp[20]对应的表
 
 * flag 设置成1就可以跳出循环。内核现将进程1设置成可中断状态，之后调用schedule()函数切换进程，进程2是唯一处于就绪态进程，因此切换到进程2中执行
 ![2019-08-20-09-52-24.png](./images/2019-08-20-09-52-24.png)
+
+# 4. 加载shell程序
+
+* 切换到进程2之后开始最开始的执行路线，和前面将的最开始切换到进程1的原理一致（因为代码完全复制，进程2行为如何和进程1区分开）
+
+* if(!(pid=fork()))这条语句为真后，调用close()函数关闭标准输入设备文件，并用rc文件替换它。
+![2019-08-20-10-00-54.png](./images/2019-08-20-10-00-54.png)
+![2019-08-20-10-01-09.png](./images/2019-08-20-10-01-09.png)
+
+* close()映射到sys_close()函数执行，
