--- a/linux kernal/基本概念/Linux 内核设计艺术/第四章 进程2创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第四章 进程2创建和执行.md
@@ -150,8 +150,52 @@ sys_open( )最后要针对 file_table[64]中与进程 l 的 filp[20]对应的表
 
 * 切换到进程2之后开始最开始的执行路线，和前面将的最开始切换到进程1的原理一致（因为代码完全复制，进程2行为如何和进程1区分开）
 
+## 4.1 替换标准输入文件tty0为rc文件
 * if(!(pid=fork()))这条语句为真后，调用close()函数关闭标准输入设备文件，并用rc文件替换它。
 ![2019-08-20-10-00-54.png](./images/2019-08-20-10-00-54.png)
 ![2019-08-20-10-01-09.png](./images/2019-08-20-10-01-09.png)
 
 * close()映射到sys_close()函数执行，
+    * 进程2继承进程1文件信息，因此进程2关闭filp[0]文件就是关闭tty0输入文件（关闭操作就是清空filp[0]信息,这里关闭的是进程2的，进程1的filp[20]没有发生变化，因为filp[20]是拷贝的）
+    * 紧接着打开rc文件，这时找到的filp[20]第一项位置，这样rc文件就替代tty0成为标准输入文件
+    * rc是脚本文件，文件中记录着一些命令，应用程序通过解析这些命令来达到执行任务目的
+
+    ![2019-08-20-10-14-51.png](./images/2019-08-20-10-14-51.png)
+
+## 4.2 加载shell程序
+* 参数是实现准备好的
+![2019-08-20-10-17-42.png](./images/2019-08-20-10-17-42.png)
+
+* execve()函数最终会映射到sys_execve()中去
+![2019-08-20-10-23-00.png](./images/2019-08-20-10-23-00.png)
+
+### 4.2.1 检测shell文件
+#### 4.2.1.1 检测i节点属性
+* do_execve()执行后会先调用namei()函数获取shell文件i节点，这和第三章讲的过程一致。以此确定shell程序是否具备加载。
+![2019-08-20-10-36-46.png](./images/2019-08-20-10-36-46.png)
+![2019-08-20-10-37-17.png](./images/2019-08-20-10-37-17.png)
+
+#### 4.2.1.2 检测文件头属性
+
+通过i节点能获取文件所在设备号和块号（文件头块号i_zone[0]）,将文件头载入缓存并获取其信息。并检测文件头信息。
+![2019-08-20-10-49-30.png](./images/2019-08-20-10-49-30.png)
+![2019-08-20-10-49-42.png](./images/2019-08-20-10-49-42.png)
+
+#### 4.2.1.3 检测shell文件内容信息
+![2019-08-20-10-54-04.png](./images/2019-08-20-10-54-04.png)
+
+## 4.3 为执行shell文件做准备条件
+
+### 4.3.1 加载参数和环境变量
+设置参数和环境变量管理指针表page，并统计参数和环境变量个数，最终将他们复制到进程1的栈空间
+![2019-08-20-11-02-50.png](./images/2019-08-20-11-02-50.png)
+![2019-08-20-11-03-02.png](./images/2019-08-20-11-03-02.png)
+* 看数据区，参数和环境变量是在内核区
+![2019-08-20-11-05-34.png](./images/2019-08-20-11-05-34.png)
+
+
+### 4.3.2 调整进程2管理结构
+进程2有了自己对应的程序shell，因此要对自身task_struct调整以适应变化。比如和原来集成1共享文件，共享页面要解除关系。要根据shell代码量身定制LDT、代码段、数据段、栈段、控制变量。
+
+
+
