--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第四章 进程2创建和执行.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第四章 进程2创建和执行.md
@@ -197,5 +197,96 @@ sys_open( )最后要针对 file_table[64]中与进程 l 的 filp[20]对应的表
 ### 4.3.2 调整进程2管理结构
 进程2有了自己对应的程序shell，因此要对自身task_struct调整以适应变化。比如和原来集成1共享文件，共享页面要解除关系。要根据shell代码量身定制LDT、代码段、数据段、栈段、控制变量。
 
+![2019-08-20-14-04-55.png](./images/2019-08-20-14-04-55.png)
+![2019-08-20-14-05-17.png](./images/2019-08-20-14-05-17.png)
+![2019-08-20-14-05-31.png](./images/2019-08-20-14-05-31.png)
+
+### 4.3.3 为执行shell调整EIP和SIP
+对sys_execve软件中断压栈值进行设置，用shell程序起始地址设置EIP，用进程2新的栈顶地址设置ESP，这样软终端结束后，进程2将从shell程序处开始执行。
+![2019-08-20-14-17-31.png](./images/2019-08-20-14-17-31.png)
+
+do_execve()函数执行完毕之后，sys_execve()便会中断返回，去执行shell程序。
+
+## 4.4 执行shell程序
+### 4.4.1 执行shell引导加载第一页程序
+shell程序开始执行后，其线性地址空间对应的程序内容并未被加载，也就不存在响应页面，因此产生一个页异常中断。次中断会进一步调用“缺页中断”处理程序来分配该页面，并加载shell程序。
+![2019-08-20-14-44-19.png](./images/2019-08-20-14-44-19.png)
+
+* do_no_page开始执行后，先确定产生原因
+    * 如果是由于需要加载程序才缺页，会尝试和其它进程共享shell（显然此前没有进程加载过shell，无法共享）
+    * 如是第一次加载shell，者申请一个新的页面，并调用bread_page()函数，从虚拟盘上读取四块（一页4kb）shell程序内容，载入内存页面。具体执行代码如下
+
+![2019-08-20-16-14-16.png](./images/2019-08-20-16-14-16.png)
+![2019-08-20-16-14-44.png](./images/2019-08-20-16-14-44.png)
+
+### 4.4.2映射加载物理地址和线性地址
+载入第一页shell程序后，内核会将该页内容映射到shell进程线性地址空间内，建立页目录表->页表->页面三级管理地址
+![2019-08-20-16-21-01.png](./images/2019-08-20-16-21-01.png)
+![2019-08-20-16-21-13.png](./images/2019-08-20-16-21-13.png)
+
+
+# 5. 系统实现怠速
+
+## 5.1 创建update进程
+
+shell程序开始执行后，要读取标准输入设备文件上信息，即task_struct中的filp[20]第一项对应的文件信息。
+
+* 将/etc/rc读取文件到缓冲区中
+* rc包含一些执行命令，重点包含下面两条执行命令
+![2019-08-20-16-51-28.png](./images/2019-08-20-16-51-28.png)
+
+* 执行update命令，shell会先创建一个进程（进程号为3 update），创建完毕后切换到update进程，过程和1进程切换到2进程过程一致。
+
+* update进程有一个非常重要的任务，将缓冲区中的数据同步到外设，每隔一段时间，update进程就会同步一次。同步之后，update进程就会被挂起，等待下一次被唤醒后执行。
+* update 进程同步之后挂起update进程，进程调度又会切换到shell进程（2进程）
+
+## 5.2 切换到shell进程继续执行
+
+* 上面第二条命令echo "/dev/hdl" > "/etc/mtab",将/dev/hdl这一字符串写入到虚拟磁盘中。执行完毕后，shell会循环调用read()读取rc文件上内容。read()对应系统调用是sys_read()
+![2019-08-20-17-02-14.png](./images/2019-08-20-17-02-14.png)
+
+* "/etc/rc"是普通文件，文件读取完毕后会返回-ERROR（文件读取具体操作，进后面）。这个结果会导致shell进程退出，退出将执行exit()函数(对应系统调用sys_exit())
+![2019-08-20-17-04-48.png](./images/2019-08-20-17-04-48.png)
+![2019-08-20-17-06-05.png](./images/2019-08-20-17-06-05.png)
+![2019-08-20-17-06-24.png](./images/2019-08-20-17-06-24.png)
+
+* tell_father()函数执行后，会给进程1发送SIGCHLD信号，通知进程1有子进程退出
+![2019-08-20-17-08-24.png](./images/2019-08-20-17-08-24.png)
+
+
+* tell_father()执行完毕后，调用schedule()函数进行进程切换。schedule()函数中对信号检测影响了进程切换。
+![2019-08-20-17-10-51.png](./images/2019-08-20-17-10-51.png)
+![2019-08-20-17-11-09.png](./images/2019-08-20-17-11-09.png)
+![2019-08-20-17-13-59.png](./images/2019-08-20-17-13-59.png)
+
+前面讲解到，进程1是进入sys_waitpid()进程然后执行schedule()函数进行进程切换，切换到进程1后会继续执行schedule()然后执行sys_waitpid()函数。
+![2019-08-20-17-18-58.png](./images/2019-08-20-17-18-58.png)
+
+* sys_wait()执行完毕后会返回到wait()函数，最终返回到init()函数中
+![2019-08-20-17-21-01.png](./images/2019-08-20-17-21-01.png)
+* 进程2创建完毕后PID是2，sys_waitpid()返回的也是2（wait()也是2），while循环为假，跳出循环。
+
+## 5.3 重建shell
+进程1继续执行while(1)
+![2019-08-20-17-24-01.png](./images/2019-08-20-17-24-01.png)
+* 重建shell进程的过程和上面非常像，但是shell进程的pid是有last_pid产生的，因此是4
+* 这次shell打开标准设备文件tty0而不是rc文件，这使得shell进程不再退出
+
+![2019-08-20-17-27-47.png](./images/2019-08-20-17-27-47.png)
+
+* 在进入 rw_char()函数后, shell 进程将被设置为可中断等待状态,这样所有的进程全部都处于可中断等待状态,再次切换到进程。去执行,系统实现怠速。
+
+* 怠速状态后，用户可以通过shell进程和操作系统进行交互.
+    * 用户通过键盘输入的内容存储在缓冲队列上，缓冲队列上内容就是tty0内容。
+    * shell进程会不断读取缓冲区中内容。如果用户没有下达指令，shell进程就一直处于可中断状态。
+    * 井给 shell进程发信号,信号将导致 shell 进程被设置为就绪状态,即被唤醒,唤醒后的 shell 继续从缓冲队列中读取数据信息井处理,完毕后, shell 进程将再次被挂起,等待下一次键盘中断被唤醒。
+
+# 6. 总结
+本章详细讲解了进程 l 创建进程 2 、加载 shell 程序、创建 update 进程、重建 she ll 、 实现系统怠速的全过程。与前面讲解激活进程 0 、进程。重建进程 l 有较大不同的地方是,进程 0 和进程 l 的代码都是操作系统设计者直接 写 到内核代码中的,进程 2 则是从硬盘中加载的执行代码,而且 shell 进程是对操作系统非常重要的用户界面进程。所以,本章内容涉及的打开终端设备文件以及大量 的文件操作,为后续学 习文件操作打下了基础。
+
+
+
+
+
 
 
