--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
@@ -18,6 +18,15 @@
 ![2019-08-21-09-44-47.png](./images/2019-08-21-09-44-47.png)
 ![2019-08-21-09-45-25.png](./images/2019-08-21-09-45-25.png)
 
+## 2.1 获取外设超级块
 read_super()读取设备数据主要分为下面三步:
 * super_block中选定一个空闲项来存储超级块
-* 将超级块载入上面
+* 将超级块载入上面空闲项
+* 根据超级块提供的的信息，载入i节点位图和逻辑块位图
+
+加载超级快表项时需要加锁。
+![2019-08-21-11-33-52.png](./images/2019-08-21-11-33-52.png)
+![2019-08-21-11-34-17.png](./images/2019-08-21-11-34-17.png)
+![2019-08-21-11-34-31.png](./images/2019-08-21-11-34-31.png)
+
+## 2.2 确定根文件系统挂载点
