--- Auto-Git Commit ---

--- a/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
+++ b/linux kernal/基本概念/Linux 内核设计艺术/第五章 文件操作.md
@@ -30,3 +30,41 @@ read_super()读取设备数据主要分为下面三步:
 ![2019-08-21-11-34-31.png](./images/2019-08-21-11-34-31.png)
 
 ## 2.2 确定根文件系统挂载点
+再次调用namei()函数，根据/mnt路径名，获取mnt目录文件的i节点后，分析i节点属性，判断i节点是否可以用来挂载文件系统。
+
+代码分析见上面
+
+## 2.3 超级块和根文件系统挂接
+挂接前确保挂接点和被挂接点都是“干净的”
+    * hdl设备的文件系统没有被安装过
+    * mnt 目录文件上也没有安装其它文件系统
+![2019-08-21-13-41-40.png](./images/2019-08-21-13-41-40.png)
+
+# 3. 实例1--用户打开一个在硬盘中已经存在的文件，并读取文件内容
+主要分为两部分，打开文件和读文件
+![2019-08-21-13-45-02.png](./images/2019-08-21-13-45-02.png)
+
+## 3.1 打开文件
+打开进程本质是某个进程操作文件，需要如下两步:
+* 将用户进程中的task_struct中的filp[20]和内核中的file_table[64]进行登记
+* 用户需要打开的i节点在file_table[64]进行登记
+
+### 3.1.1 filp[20],file_table[64],i节点三者之间关系
+* filp[20]记录进程打开的文件数，一个进程可以打开多个文件，也可以打开同一文件多次。没打开一次，filp[20]就记录一项，因此一个进程最多能同时打开文件20次
+
+* file_table[64]是记录所有进程打开文件的数据结构，和filp[20]一样也是记录打开文件次数。系统最多能同时打开文件次数64次。
+
+* i节点是记录文件属性最关键结构，操作系统中i节点和文件是一一对应的，找到i节点就能找到唯一文件。内核通过inode_table[32]掌握正在使用的文件i节点数，每个被使用的i节点都要记录其中。
+
+打开文件其实就是建立三者数据结构之间关系。open()函数映射到sys_open()系统调用实现上面关系建立。
+![2019-08-21-14-06-35.png](./images/2019-08-21-14-06-35.png)
+
+## 3.2 filp[20]file_table[64]挂接
+
+sys_open()中实现挂接。
+![2019-08-21-14-14-46.png](./images/2019-08-21-14-14-46.png)
+![2019-08-21-14-15-01.png](./images/2019-08-21-14-15-01.png)
+
+## 3.3 获取文件i节点
+
+主要根据文件路径名找到文件i节点。
